syntax = "proto3";
package bulldog.bond.v1beta1;

import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/mattverse/dsrv-tutorial/x/bond/types";

// Query defines the gRPC querier service.
service Query {
  rpc TokenBalanceofChain(QueryTokenBalanceofChain) returns (QueryTokenBalanceofChainResponse) {
    option (google.api.http).get =  "/bulldog/bond/v1beta1/balanceofchain";
  }
}

message QueryTokenBalanceofChain {
}

message QueryTokenBalanceofChainResponse {
  cosmos.base.v1beta1.Coin coin = 1;
}
